add verbose flag and blacklist

--- a/config_ffa.json
+++ b/config_ffa.json
@@ -3,6 +3,9 @@
         "botName": "RCT Bot"
     },
     "callbackPort": 8080,
+    "verbose": true,
+	"blacklist": [
+	],
     "interactions": [
         {
             "trigger": {
