--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/oli414/OpenRCT2StreamIntegration#readme",
   "dependencies": {
-    "express": "^4.17.1",
     "opn": "^6.0.0",
     "tmi.js": "^1.5.0",
-    "websocket": "^1.0.32"
+    "websocket": "^1.0.32",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "socket.io": "^4.4.1",
+    "tiktok-live-connector": "^1.1.5"
   }
 }
