--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "socket.io": "^4.4.1",
-    "tiktok-live-connector": "^1.1.5"
+    "tiktok-live-connector": "^1.1.5",
+    "node-fetch": "^2.6.1"
   }
 }
